# devonthink-cli

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  skills-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: swift.yml
docs/: README.md
docs/design/: 00-source-reconciliation.md  01-principles-and-decisions.md  01-purpose-and-principles.md  02-information-model.md  02-system-topology.md  03-information-model.md  03-record-and-note-specification.md  04-automation-surface.md  04-devonthink-operating-model.md  05-workflows.md  06-operations-and-safety.md  07-devonthink-operating-model.md  07-runtime.md  08-record-and-note-specification.md  08-repo-hygiene.md  09-automation-architecture.md  09-glossary.md  10-mcp-extension-specification.md  11-agent-skills-and-runbooks.md  12-project-hygiene-and-work-surface.md  13-capability-and-mvp-map.md  15-glossary.md  README.md  (+12 more)
inputs/: README.md
pkim-binary/: .gitignore  Package.resolved  Package.swift
prompts/: README.md  apply-approved-metadata.md  create-knowledge-note.md  create-relation-note.md  evaluate-safe-filing.md  profile-record.md  search-notes.md  sweep-inbox.md  update-knowledge-note.md  update-relation-note.md
schemas/: README.md  capability-manifest.schema.json  export-manifest.schema.json  mutation-result.schema.json  profile-packet.schema.json  run-manifest.schema.json
scripts/: README.md
skills/: README.md  RETIREMENT-MAP.md
(+183 files in other folders)
